# EA-Amazon-Helicopter

EAAH/: .gitattributes  .gitignore  CMakeLists.txt
EAAH/src/: bombEntity.cpp  bombEntity.h  bulldozerEntity.cpp  bulldozerEntity.h  entity.cpp  entity.h  game.cpp  game.h  gameOverScene.cpp  gameOverScene.h  gameScene.cpp  gameScene.h  main.cpp  mainMenuScene.cpp  mainMenuScene.h  menu.cpp  menu.h  particles.cpp  particles.h  pauseMenuScene.cpp  pauseMenuScene.h  playerEntity.cpp  playerEntity.h  scene.cpp  scene.h  sceneManager.cpp  sceneManager.h  splashScreenScene.cpp  splashScreenScene.h  spritesheet.cpp  spritesheet.h  tree.cpp  tree.h  util.h
